<resources>
    <string name="app_name">学生日历</string>
    <string name="year1">2022年</string>
    <string name="month1">1月</string>
    <string name="day1">1</string>
    <string name="lunar">农历</string>
    <string name="lunar_day1">初一</string>
    <string name="up_down">下拉显示视图选项</string>
    <string name="search">搜索备忘录</string>
    <string name="more">更多功能</string>
    <string name="add_memorandum">添加备忘录</string>
    <string name="hs_eb_cz">天地生年</string>
    <string name="lunar_month_first_day">农历初一</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="title1">新建备忘录</string>
    <string name="close">关闭</string>
    <string name="check">完成</string>
    <string name="start_time">开始时间</string>
    <string name="finish_time">结束时间</string>
    <string name="text">内容</string>
    <string name="set_time1">设置开始时间</string>
    <string name="set_time2">设置结束时间</string>
    <string name="ok">确定</string>
    <string name="back_today">回到今天</string>
</resources>