<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey1"
    tools:context=".AddActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/close"
            android:contentDescription="@string/close"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:src="@mipmap/close"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/close"
            android:gravity="center"
            android:layout_marginStart="10dp"/>
        <ImageView
            android:id="@+id/check"
            android:contentDescription="@string/check"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@mipmap/check"
            android:scaleType="fitCenter"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <Button
            android:id="@+id/set_time1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/set_time1"
            android:textColor="@color/black"
            android:background="@color/grey1"/>
        <TextView
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/grey2"
            android:textColor="@color/black"/>
    </LinearLayout>
    <DatePicker
        android:id="@+id/date_picker1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:background="@color/orange"/>
    <TimePicker
        android:id="@+id/time_picker1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:timePickerMode="spinner"
        android:background="@color/orange"/>
    <Button
        android:id="@+id/ok1"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:background="@color/grey1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <Button
            android:id="@+id/set_time2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/set_time2"
            android:textColor="@color/black"
            android:background="@color/grey1"/>
        <TextView
            android:id="@+id/finish_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:textColorHint="@color/grey2"
            android:textColor="@color/black"/>
    </LinearLayout>
    <DatePicker
        android:id="@+id/date_picker2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:background="@color/orange"/>
    <TimePicker
        android:id="@+id/time_picker2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:timePickerMode="spinner"
        android:background="@color/orange"/>
    <Button
        android:id="@+id/ok2"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:background="@color/grey1"/>
    <EditText
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/text"
        android:textColorHint="@color/grey2"
        android:textColor="@color/black"/>
</LinearLayout>